--- a/themes/inclusion-connect/login/resources/css/login.css
+++ b/themes/inclusion-connect/login/resources/css/login.css
@@ -296,14 +296,17 @@ a.zocial {
   border-radius: 0;
   white-space: normal;
 }
+
 .zocial:before {
   border-right: 0;
   margin-right: 0;
 }
+
 .zocial span:before {
   padding: 7px 10px;
   font-size: 14px;
 }
+
 .zocial:hover {
   background: #ededed !important;
 }
@@ -326,6 +329,7 @@ a.zocial {
 .zocial.microsoft:before {
   content: "\f15d";
 }
+
 .zocial.stackoverflow:before {
   color: inherit;
 }
@@ -457,10 +461,12 @@ a.zocial {
     margin-right: 20px;
     padding: 20px 20px 30px 20px;
   }
+
   #logo-ministere {
     display: none !important;
   }
 }
+
 @media (max-width: 767px) {
   .login-pf-page .card-pf {
     max-width: none;
@@ -468,6 +474,7 @@ a.zocial {
     margin-right: 0;
     padding-top: 0;
   }
+
   .card-pf.login-pf-accounts {
     max-width: none;
   }
@@ -477,6 +484,7 @@ a.zocial {
   font-size: 15px;
   color: #000638;
 }
+
 #kc-content-wrapper .row {
   margin-left: 0;
   margin-right: 0;
@@ -488,9 +496,11 @@ a.zocial {
     border-right: 1px solid #d1d1d1;
     margin-right: -1px;
   }
+
   .login-pf-page .login-pf-social-section:last-of-type {
     padding-left: 40px;
   }
+
   .login-pf-page .login-pf-social-section .login-pf-social-link:last-of-type {
     margin-bottom: 0;
   }
@@ -499,6 +509,7 @@ a.zocial {
 .login-pf-page .login-pf-social-link {
   margin-bottom: 25px;
 }
+
 .login-pf-page .login-pf-social-link a {
   padding: 2px 0;
 }
@@ -587,6 +598,7 @@ form#kc-select-back-form div.login-pf-social-section {
 }
 
 #show-password,
+#show-password-new,
 #show-password-confirm {
   position: absolute;
   margin-top: -30px;
