feat: templates redesign

--- a/themes/inclusion-connect/login/resources/css/custom.css
+++ b/themes/inclusion-connect/login/resources/css/custom.css
@@ -6,6 +6,10 @@ body {
 
 main {
   flex-grow: 1;
+  background-color: #fff;
+  background-image: url('../img/illustration-bg-ic.svg');
+  background-repeat: no-repeat;
+  background-position: top -120px left;
 }
 
 .fr-hint-text ul {
@@ -20,15 +24,27 @@ main {
   display: none;
 }
 
-.fr-text-underline {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
 .pre-register {
   display: block;
 }
 
 .register-form {
   display: none;
+}
+
+.ic-text-underline {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.ic-text-center {
+  text-align: center;
+}
+
+@media (min-width: 62em) {
+  .ic-block-img-lg {
+    display: flex !important;
+    justify-content: center;
+    align-content: center;
+  }
 }
